fixed JADE style spacing; css clean, added helper classes for spacings (margin)

--- a/assets/css/account/account.scss
+++ b/assets/css/account/account.scss
@@ -5,7 +5,6 @@
 .reset-password-container,
 .registered-successfully-container {
   @include font-with-weight('Merriweather Sans');
-  @include ui-form-placeholder;
   background-color: $white;
   border-radius: 3px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
@@ -27,7 +26,7 @@
     // CSS-olny Arrow
     &:after {
       border: solid transparent;
-      border-bottom-color: #fff;
+      border-bottom-color: $white;
       border-color: rgba(255, 255, 255, 0);
       border-width: 13px;
       bottom: 0;
@@ -136,7 +135,7 @@
       }
       span {
         @include font-with-weight('Sofia Pro', 500);
-        color: #a3a3ae;
+        color: $accent-gray;
         cursor: pointer;
         font-size: 10px;
         line-height: 13px;
@@ -156,7 +155,7 @@
     margin-top: 15px;
     p {
       @include font-with-weight;
-      color: #a3a3ae;
+      color: $accent-gray;
       font-size: 13px;
       line-height: 22px;
       text-transform: uppercase;
@@ -171,7 +170,7 @@
         align-items: center;
         p {
           @include font-with-weight('Sofia Pro', 500);
-          color: #a3a3ae;
+          color: $accent-gray;
           cursor: pointer;
           font-size: 10px;
           line-height: 13px;
